--- a/Attention_Is_All_You_Need.ipynb
+++ b/Attention_Is_All_You_Need.ipynb
@@ -1046,66 +1046,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "kD3SwAEwjkVq"
-      },
-      "source": [
-        "## Download Pre-Trained Model\n",
-        "Run this section instead of the \"Training\" section if you wish to download the pre-trained model instead of training one yourself."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "dmvTfWhbjk7V"
-      },
-      "source": [
-        "# !wget -O Transformer.pth https://gitlab.com/rishika2110/weights/-/blob/6e88f0c7acaf5d86d803eca8abb150e0b79f95ef/neural_machine_translation/Transformer.pth"
-      ],
-      "execution_count": 36,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "hRL0SdqgjlUt"
-      },
-      "source": [
-        "# MODEL_STORE_PATH = \"Transformer.pth\""
-      ],
-      "execution_count": 37,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "tScI3G6Rjd0Q"
       },
       "source": [
-        "## Training\n",
-        "Run this section only if you want to train the model yourself and store the trained weights in G-Drive."
+        "## Training\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "nu2aAm817TBA"
-      },
-      "source": [
-        "#drive.mount('/content/gdrive')"
-      ],
-      "execution_count": 38,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "TEv7n__PkIZa"
-      },
-      "source": [
-        "#MODEL_STORE_PATH = '/content/gdrive/My Drive/Colab/NLP/Machine Translation/Models/Transformer.pth'"
-      ],
-      "execution_count": 39,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1131,7 +1076,6 @@
         "    if valid_loss < min_losses[0]:\n",
         "        min_losses[0] = valid_loss\n",
         "        min_losses[1] = train_loss\n",
-        "        #torch.save(seq2seq.state_dict(), MODEL_STORE_PATH)\n",
         "    if epoch % int(NUM_EPOCHS / 10) == 0:\n",
         "        elapsed_time = Epoch_time(start_time, time.time())\n",
         "        print(f\"Time taken for epochs {prev_epoch} to {epoch}: {elapsed_time[0]}m {elapsed_time[1]}s\")\n",
@@ -1200,7 +1144,6 @@
         "plt.plot(train_losses, label = 'Training Loss')\n",
         "plt.plot(valid_losses, label='Validation Loss')\n",
         "plt.legend()\n",
-        "#plt.savefig('/content/gdrive/My Drive/Colab/NLP/Machine Translation/Plots/Transformer.jpeg')\n",
         "plt.show()"
       ],
       "execution_count": 41,
@@ -1234,34 +1177,6 @@
       "source": [
         "Run the cell below to load the model for sampling.\n",
         "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "rJ7GdE_2kdhb",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 165
-        },
-        "outputId": "8b608daa-0d4b-4ebc-f76e-5e43bf270125"
-      },
-      "source": [
-        "#seq2seq.load_state_dict(torch.load(MODEL_STORE_PATH))"
-      ],
-      "execution_count": 42,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-42-264629d0da4f>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mseq2seq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_state_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mMODEL_STORE_PATH\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'MODEL_STORE_PATH' is not defined"
-          ]
-        }
       ]
     },
     {
