--- a/cbow.ipynb
+++ b/cbow.ipynb
@@ -215,7 +215,8 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "90eda12e-11b8-4394-fc38-7a4383bd827b"
+        "outputId": "90eda12e-11b8-4394-fc38-7a4383bd827b",
+        "collapsed": true
       },
       "execution_count": 43,
       "outputs": [
